--- a/modules/index.html
+++ b/modules/index.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
+    <p>Check the log on the console</p>
     <script type="module">
         import {Person, msg} from "./es6_modules.js";
         import './for_of_loops.js';
